Shruthi | Removed sure-fire plugin from whp-web's pom.xml. Its already present in parent pom.xml.