@@ -191,22 +191,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <!--Unit and Integration tests-->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.9</version>
-                <configuration>
-                    <argLine>-XX:MaxPermSize=1024M -ea</argLine>
-                    <printSummary>true</printSummary>
-                    <includes>
-                        <include>**/*Test.java</include>
-                        <include>**/*IT.java</include>
-                    </includes>
-                    <excludes>
-                    </excludes>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
